--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     },
     "require": {
         "php": "^8.1",
-        "statamic/cms": "^4.0|^5.17.0|^6.0"
+        "statamic/cms": "^4.0 || ^5.17.0 || ^6.0"
     },
     "extra": {
         "statamic": {
             "name": "Alt Redirect",
-            "description": "Alt Redirect addon"
+            "description": "Alt Redirect addon six"
         },
         "laravel": {
             "providers": [
